--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -111,7 +111,8 @@ $rate-font-size: $font-size;
 $rate-animate-time: 0.3s;
 $rate-icon-height: 20px;
 $rate-icon-color: $color-gray + #444444;
-$rate-default-color: $color-blue;
+$rate-default-color: $color-gray;
+$rate-info-color: $color-blue;
 $rate-success-color: $color-green;
 $rate-error-color: $color-red;
 $rate-warning-color: $color-yellow;
