--- a/src/styles/components/icon.scss
+++ b/src/styles/components/icon.scss
@@ -2,6 +2,7 @@
 @import "~@/styles/const.scss";
 
 .xin-iconfont {
+  display: inline-block;
   &.loading {
     animation: icon-loading-animate 2s linear infinite;
   }
