--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -332,3 +332,12 @@ $slide-info-color: $color-blue;
 $slide-success-color: $color-green;
 $slide-warning-color: $color-yellow;
 $slide-error-color: $color-red;
+
+// viewer
+$viewer-animate-time: 0.3s;
+$viewer-font-size: $font-size;
+$viewer-default-color: $color-gray;
+$viewer-info-color: $color-blue;
+$viewer-success-color: $color-green;
+$viewer-warning-color: $color-yellow;
+$viewer-error-color: $color-red;
