--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -34,3 +34,4 @@
 @import "~@/styles/components/icon.scss";
 @import "~@/styles/components/tree.scss";
 @import "~@/styles/components/slide.scss";
+@import "~@/styles/components/viewer.scss";
