--- a/src/styles/components/colorPicker.scss
+++ b/src/styles/components/colorPicker.scss
@@ -55,28 +55,11 @@
       padding: 10px;
       box-sizing: border-box;
       box-shadow: 0 0 8px transparentize($colorPicker-default-color, 0.6);
+      
       .content-picker {
-        width: 100%;
-        height: 180px;
         position: relative;
         user-select: none;
-        .position {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          &.colors {
-            background: red;
-          }
-          &.whites {
-            background: linear-gradient(90deg, #fff, transparent);
-          }
-          &.blanks {
-            background: linear-gradient(0, #000, transparent);
-          }
-        }
-        .pickers {
+        .box-pickers {
           width: 0;
           height: 0;
           position: absolute;
@@ -84,12 +67,7 @@
             width: 0;
             height: 0;
             position: relative;
-            &.down {
-              &::after {
-                content: " ";
-              }
-            }
-            &::before {
+            .dot {
               width: 8px;
               height: 8px;
               position: absolute;
@@ -99,38 +77,39 @@
               border: 1px solid #333;
               background: #fff;
               box-sizing: border-box;
-              content: " ";
-              display: block;
+              // content: " ";
+              // display: block;
               transform: translate3d(-50%, -50%, 0);
             }
-            &::after {
+            .dot-border {
               width: 50px;
               height: 50px;
               position: absolute;
               top: -50%;
               left: -50%;
+              z-index: 10;
               border-radius: 100%;
               border-width: 25px;
               border-style: solid;
-              border-color: red;
-              display: block;
               transform: translate3d(-50%, -50%, 0);
+              box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
             }
           }
         }
-        .pickers-cover {
-          width: 100%;
-          height: 100%;
-          position: absolute;
-          left: 0;
-          top: 0;
+        &.content-line {
+          margin: 10px 0;
+          .bar-pickers {
+            position: absolute;
+            top: 0;
+            height: 100%;
+            width: 4px;
+            background: #fff;
+            box-shadow: 0 0 4px rgba(0, 0, 0, 0.7);
+            transform: translateX(-50%);
+            box-sizing: border-box;
+            cursor: pointer;
+          }
         }
-      }
-      .content-line {
-        width: 100%;
-        height: 10px;
-        margin: 10px 0;
-        background: linear-gradient(90deg, red 0, #ff0 17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, red);
       }
       .content-bottom {
         width: 100%;
