--- a/src/app/const.scss
+++ b/src/app/const.scss
@@ -1,1 +1,6 @@
 $font-size: 12px;
+$color-gray: #7d7f82;
+$color-blue: #0095ff;
+$color-green: #15bf81;
+$color-yellow: #f7ab42;
+$color-red: #ff6666;
