--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -340,3 +340,14 @@ $viewer-info-color: $color-blue;
 $viewer-success-color: $color-green;
 $viewer-warning-color: $color-yellow;
 $viewer-error-color: $color-red;
+
+// upload
+$upload-width: 90px;
+$upload-space-width: $space-width;
+$upload-animate-time: 0.3s;
+$upload-font-size: $font-size;
+$upload-default-color: $color-gray;
+$upload-info-color: $color-blue;
+$upload-success-color: $color-green;
+$upload-warning-color: $color-yellow;
+$upload-error-color: $color-red;
