--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -356,3 +356,15 @@ $upload-info-color: $color-blue;
 $upload-success-color: $color-green;
 $upload-warning-color: $color-yellow;
 $upload-error-color: $color-red;
+
+// crop
+$crop-width: 500px;
+$crop-height: 300px;
+$crop-space-width: $space-width;
+$crop-animate-time: 0.3s;
+$crop-font-size: $font-size;
+$crop-default-color: $color-gray;
+$crop-info-color: $color-blue;
+$crop-success-color: $color-green;
+$crop-warning-color: $color-yellow;
+$crop-error-color: $color-red;
