--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,7 @@
 
-@import "~@/styles/iconfont.scss";
-@import "~@/styles/const.scss";
-@import "~@/styles/animate.scss";
+@import "./iconfont.scss";
+@import "./const.scss";
+@import "./animate.scss";
 
-@import "~@/styles/components/index.scss";
-@import "~@/styles/skill/index.scss";
+@import "./components/index.scss";
+@import "./skill/index.scss";
