--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -1,33 +1,33 @@
 
-@import "~@/styles/components/label.scss";
-@import "~@/styles/components/input.scss";
-@import "~@/styles/components/button.scss";
-@import "~@/styles/components/radio.scss";
-@import "~@/styles/components/checkbox.scss";
-@import "~@/styles/components/select.scss";
-@import "~@/styles/components/switch.scss";
-@import "~@/styles/components/rate.scss";
-@import "~@/styles/components/datePicker.scss";
-@import "~@/styles/components/colorPicker.scss";
-@import "~@/styles/components/tagInput.scss";
-@import "~@/styles/components/table.scss";
-@import "~@/styles/components/page.scss";
-@import "~@/styles/components/tabs.scss";
-@import "~@/styles/components/dialog.scss";
-@import "~@/styles/components/message.scss";
-@import "~@/styles/components/model.scss";
-@import "~@/styles/components/steps.scss";
-@import "~@/styles/components/progress.scss";
-@import "~@/styles/components/tooltip.scss";
-@import "~@/styles/components/badge.scss";
-@import "~@/styles/components/transfer.scss";
-@import "~@/styles/components/split.scss";
-@import "~@/styles/components/loading.scss";
-@import "~@/styles/components/tips.scss";
-@import "~@/styles/components/tag.scss";
-@import "~@/styles/components/grid.scss";
-@import "~@/styles/components/popover.scss";
-@import "~@/styles/components/icon.scss";
-@import "~@/styles/components/tree.scss";
-@import "~@/styles/components/slide.scss";
-@import "~@/styles/components/viewer.scss";
+@import "./label.scss";
+@import "./input.scss";
+@import "./button.scss";
+@import "./radio.scss";
+@import "./checkbox.scss";
+@import "./select.scss";
+@import "./switch.scss";
+@import "./rate.scss";
+@import "./datePicker.scss";
+@import "./colorPicker.scss";
+@import "./tagInput.scss";
+@import "./table.scss";
+@import "./page.scss";
+@import "./tabs.scss";
+@import "./dialog.scss";
+@import "./message.scss";
+@import "./model.scss";
+@import "./steps.scss";
+@import "./progress.scss";
+@import "./tooltip.scss";
+@import "./badge.scss";
+@import "./transfer.scss";
+@import "./split.scss";
+@import "./loading.scss";
+@import "./tips.scss";
+@import "./tag.scss";
+@import "./grid.scss";
+@import "./popover.scss";
+@import "./icon.scss";
+@import "./tree.scss";
+@import "./slide.scss";
+@import "./viewer.scss";
