--- a/src/styles/components/tabs.scss
+++ b/src/styles/components/tabs.scss
@@ -38,19 +38,19 @@
       overflow-y: auto;
     }
   }
-  &.blue {
-    border-color: transparentize($tabs-active-color, 0);
+  &.xin-tabs-info {
+    border-color: transparentize($tabs-info-color, 0);
     &:hover {
-      box-shadow: 0 0 8px transparentize($tabs-active-color, 0.6);
+      box-shadow: 0 0 8px transparentize($tabs-info-color, 0.6);
     }
     .xin-tabs-header {
-      background: transparentize($tabs-active-color, 0);
+      background: transparentize($tabs-info-color, 0);
       .xin-tabs-header-item {
         color: #fff;
         &.active {
-          color: $tabs-active-color;
-          border-left: 1px solid transparentize($tabs-active-color, 0);
-          border-right: 1px solid transparentize($tabs-active-color, 0);
+          color: $tabs-info-color;
+          border-left: 1px solid transparentize($tabs-info-color, 0);
+          border-right: 1px solid transparentize($tabs-info-color, 0);
         }
       }
     }
