--- a/src/styles/const.scss
+++ b/src/styles/const.scss
@@ -187,7 +187,7 @@ $tabs-animate-time: 0.3s;
 $tabs-item-height: $line-height + 10px;
 $tabs-width: 100px;
 $tabs-default-color: $color-gray;
-$tabs-active-color: $color-blue;
+$tabs-info-color: $color-blue;
 $tabs-success-color: $color-green;
 $tabs-warning-color: $color-yellow;
 $tabs-error-color: $color-red;
